attribute zero validation, + sign text check, alignment fix

--- a/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/campaignCycle.scss
+++ b/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/campaignCycle.scss
@@ -35,9 +35,9 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-gap: 2rem;
-    .options-card{
+    .options-card {
       max-height: 10rem;
-    } 
+    }
   }
   .popup-wrap {
     .popup-module-main {
@@ -251,8 +251,11 @@
     .employee-select-wrap.form-field {
       width: 100%;
     }
+    .digit-employee-card-input {
+      margin-bottom: 0;
+    }
   }
-  .options-card{
+  .options-card {
     max-height: 10rem;
   }
 }
